Import of JJNAPIORK/DBIx-Class-Migration-0.028 from CPAN.
gitpan-cpan-distribution: DBIx-Class-Migration
gitpan-cpan-version:      0.028
gitpan-cpan-path:         JJNAPIORK/DBIx-Class-Migration-0.028.tar.gz
gitpan-cpan-author:       JJNAPIORK
gitpan-cpan-maturity:     released

--- a/lib/DBIx/Class/Migration/Tutorial.pod
+++ b/lib/DBIx/Class/Migration/Tutorial.pod
@@ -43,7 +43,7 @@ natural progression in learning.
 
 Dealing with change in your database can be a vexing problem.  You need the
 ability manage database versions (how your database changes over time).  You
-need to be able to upgrade seemlessly from one version to another.  You need
+need to be able to upgrade seamlessly from one version to another.  You need
 to be able to manage database and system data, and how they change over time.
 Additionally you may need to be able to create subsets of data for testing,
 and the ability to reset the database to a given state at any time.
