Import of JJNAPIORK/DBIx-Class-Migration-0.031 from CPAN.
gitpan-cpan-distribution: DBIx-Class-Migration
gitpan-cpan-version:      0.031
gitpan-cpan-path:         JJNAPIORK/DBIx-Class-Migration-0.031.tar.gz
gitpan-cpan-author:       JJNAPIORK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,17 @@
 Revision history for DBIx-Class-Migration
 
+0.031   25 September 2012
+        - Upped the dependency on DBIC:Fixtures to the latest version so that
+          we get fixes related to Postgresql sequences.
+        - Added a test case to make sure we populating fixtures with more
+          complex table relationships works.
+        - Allow you to invoke more than one command at a time, such as
+          "dbic-migration install populate --fixture_set core"
+        - New migration script trait 'Populate' that exposes a DBIC:Fixtures
+          object to your run scripts, making it easier to use existing and
+          previously dumped fixture sets in your install/upgrade/downgrade
+          cycle.
+
 0.030  11 September 2012
         - in t/help.t, specify minimum version of Capture::Tiny to get required
           functionality.
@@ -9,7 +21,7 @@ Revision history for DBIx-Class-Migration
           (This feature is considered BETA, please report your experiences
           and we need docs / test cases).
         - 9/11 never forget and thank you to everyone who's stood strong these
-          many years.  
+          many years.
 
 0.029  05 September 2012
         - Better error message when you forget to have a $VERSION in your
