Import of JJNAPIORK/DBIx-Class-Migration-0.033 from CPAN.
gitpan-cpan-distribution: DBIx-Class-Migration
gitpan-cpan-version:      0.033
gitpan-cpan-path:         JJNAPIORK/DBIx-Class-Migration-0.033.tar.gz
gitpan-cpan-author:       JJNAPIORK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for DBIx-Class-Migration
 
+0.033   03 October 2012
+        - Refactored ::RunScript such that 'migrate' can use externally added
+          traits.  Documented this.
+
 0.032   26 September 2012
         - New run script trait: 'TargetPath'.
         - New command flag 'extra_schemaloader_args' which allows you to 
