--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for DBIx-Class-Migration
 
+0.040   05 September 2013
+        - Support specifying sql_translator_args from the Script wrapper. This
+          can be used to specify the database version to be used in the SQL
+          producer, for example.
+
 0.039   24 June 2013
         - Fixed behavior when --target_dir is not specified.  There was a
           regression introduced in the previous version that tried to default
