Import of JJNAPIORK/DBIx-Class-Migration-0.042 from CPAN.
gitpan-cpan-distribution: DBIx-Class-Migration
gitpan-cpan-version:      0.042
gitpan-cpan-path:         JJNAPIORK/DBIx-Class-Migration-0.042.tar.gz
gitpan-cpan-author:       JJNAPIORK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -2,6 +2,10 @@ Revision history for DBIx-Class-Migration.
 
 NOTE: Date format is YEAR-MONTH-DAY
 
+0.042   2013-10-16
+        - Added a '.devdir' to 't/' to hopefully solve reported issues with
+        the newest DevShareDir
+
 0.041   2013-09-18
         - Changed changes file date spec to match CPAN::Spec.
         - Fix for changes in how inlined files are loaded, due to upstream 
