Import of JJNAPIORK/DBIx-Class-Migration-0.044 from CPAN.
gitpan-cpan-distribution: DBIx-Class-Migration
gitpan-cpan-version:      0.044
gitpan-cpan-path:         JJNAPIORK/DBIx-Class-Migration-0.044.tar.gz
gitpan-cpan-author:       JJNAPIORK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -2,6 +2,11 @@ Revision history for DBIx-Class-Migration.
 
 NOTE: Date format is YEAR-MONTH-DAY
 
+0.044   2013-20-35
+        - POD fixs (MidLifeXis++)
+        - fix probably where a --targetdir override is not probably recognized
+        (agorman++)
+
 0.043   2013-10-21
         - Another attempt to fix the regression caused by changes to
         ::DevShareDir
